# vault-health-mcp

./: .gitignore  LICENSE  README.md  mcpize.yaml  pyproject.toml  requirements.txt  server.json
scripts/: generate_license.py
src/vault_health/: __init__.py  __main__.py  checker.py  server.py
vault_health/: __init__.py  __main__.py  license.py  server.py
